Plugins\Changes.txt
Add new items to top
(This summarizes all changes to all plugins.)

2007-01-14 Tim
 PATCH: [ 1633944 ] Fix VB example plugin "IgnoreTwoFirstCharsOrder"
  Plugins\src_VB\IgnoreTwoFirstCharsOrder:
   WinMergeScript.cls
 PATCH: [ 1633632 ] Plugin to ignore leading line numbers in text files
  New file Plugins\dlls:
   IgnoreLeadingLineNumbers.dll
  New file Plugins\src_VB\IgnoreLeadingLineNumbers:
   IgnoreLeadingLineNumbers.vbp WinMergeScript.cls

2007-01-13 Tim
 The file "Plugins.txt" is unnecessary after patch #1627363 and #1630397
  Remove file Plugins\dlls: Plugins.txt

2006-12-12 Tim
 The file "readme_users.txt" is unnecessary after patch #1611595
  Remove file Plugins\dlls: readme_users.txt

2006-08-03 Kimmo
 Fix HideFirstLetter plugin compile with VS2003.Net. Bump version number to 1.0.1.
  Plugins\src_VCPP\HideFirstLetter:
   HideFirstLetter.rc WinMergeScript.cpp
 Fix WatchBeginningOfLog plugin compile with VS2003.Net. Bump version number to 1.0.1.
  Plugins\src_VCPP\WatchBeginningOfLog:
   WatchBeginningOfLog.rc WinMergeScript.cpp
 Fix WatchEndOfLog plugin compile with VS2003.Net. Bump version number to 1.0.1.
  Plugins\src_VCPP\WatchEndOfLog:
   WatchEndOfLog.rc WinMergeScript.cpp
 New versions of plugin dlls
  dlls: WatchBeginningOfLog.dll (1.0.1), WatchEndOfLog.dll (1.0.1)

2006-08-03 Gal
 PATCH: [ 1533020 ] Assign new and unique plug-ins UUIDs
  Plugins\src_VCPP\HideFirstLetter:
    HideFirstLetter.cpp HideFirstLetter.idl WinMergeScript.h
  Plugins\src_VCPP\WatchBeginningOfLog:
    WatchBeginningOfLog.cpp WatchBeginningOfLog.idl WinMergeScript.h
  Plugins\src_VCPP\WatchEndOfLog:
    WatchEndOfLog.cpp WatchEndOfLog.idl WinMergeScript.h
 
 PATCH: Fixed compilation error on debug builds.
  Plugins\src_VCPP\DisplayBinaryFiles: typeinfoex.h
  Plugins\src_VCPP\DisplayXMLFiles: typeinfoex.h
  Plugins\src_VCPP\EditBinaryFiles: typeinfoex.h

2006-07-31 Kimmo
 BUG: [ 1423769 ] Wrong link path in DisplayXMLFiles in Merge Min Release