@@ -54,8 +54,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,4,0
- PRODUCTVERSION 1,0,4,0
+ FILEVERSION 1,0,5,17115
+ PRODUCTVERSION 1,0,5,17115
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -72,12 +72,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "\0"
             VALUE "FileDescription", "DisplayBinaryFiles Module\0"
-            VALUE "FileVersion", "1, 0, 4, 0\0"
+            VALUE "FileVersion", "1, 0, 5, 17115\0"
             VALUE "InternalName", "DisplayBinaryFiles\0"
-            VALUE "LegalCopyright", "Copyright 2003-2006\0"
+            VALUE "LegalCopyright", "Copyright 2003-2007\0"
             VALUE "OriginalFilename", "DisplayBinaryFiles.DLL\0"
             VALUE "ProductName", "DisplayBinaryFiles Module\0"
-            VALUE "ProductVersion", "1, 0, 4, 0\0"
+            VALUE "ProductVersion", "1, 0, 5, 17115\0"
             VALUE "OLESelfRegister", "\0"
         END
     END
